2005-05-18  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* config/sparc/sol2.h (TARGET_DEFAULT): Add back MASK_APP_REGS.
	* config/sparc/sol2-64.h (TARGET_DEFAULT): Likewise.
	* config/sparc/sp-elf.h (TARGET_DEFAULT): Delete.
	* doc/invoke.texi (SPARC options): Document that -mapp-regs is
	the default on Solaris too.

2005-05-17  Daniel Berlin  <dberlin@dberlin.org>

	* tree-ssa-pre.c (find_or_generate_expression): CALL_EXPR
	is okay too.

2005-05-17  Zdenek Dvorak  <dvorakz@suse.cz>

	* timevar.def (TV_SCEV_CONST): New timevar.
	* tree-optimize.c (init_tree_optimization_passes): Add
	pass_scev_cprop.
	* tree-pass.h (pass_scev_cprop): Declare.
	* tree-scalar-evolution.c (scev_const_prop): New function.
	* tree-scalar-evolution.h (scev_const_prop): Declare.
	* tree-ssa-loop.c (gate_scev_const_prop, pass_scev_cprop):
	New.
	* tree-cfg.c (replace_uses_by): Export.
	* tree-flow.h (replace_uses_by): Declare.

2005-05-17  Mike Stump  <mrs@apple.com>

	Yet more Objective-C++...

	* c-common.h (objc_finish_try_stmt): Add.
	(objc_build_synchronized): Add.
	(objc_generate_write_barrier): Add.
	* stub-objc.c (objc_build_synchronized): Add return value.
	(objc_finish_try_stmt): Likewise.
	(objc_generate_write_barrier): Add.

	* c-common.h (objc_rewrite_function_call): Add.
	* c-typeck.c (build_function_call): Allow objc to rewrite
	FUNCTION_DECLs.
	(build_modify_expr): Allow objc to generate write barriers.
	* c.opt (Wassign-intercept): Add.
	(Wstrict-selector-match): Add.
	(fobjc-call-cxx-cdtors): Add.
	(fobjc-direct-dispatch): Add.
	(fobjc-gc): Add.
	* dbxout.c (get_lang_number): Add Objective-C++ support.
	* doc/invoke.texi (-fobjc-call-cxx-cdtors): Likewise.
	(-Wstrict-selector-match): Likewise.
	(-fobjc-direct-dispatch): Likewise.
	(-Wassign-intercept): Likewise.
	(Overall Options): Likewise.
	* gengtype.c (get_output_file_with_visibility): Likewise.
	* stub-objc.c (objc_rewrite_function_call): Add.
	* config/darwin.h (ASM_OUTPUT_LABELREF): Improved quoting support.
